# titans

./: Cargo.toml  README.md
src/: main.rs
src/extractors/: bitchute.rs  doodstream.rs  libsyn.rs  lulustream.rs  mod.rs  mp4upload.rs  odysee.rs  reddit.rs  rokfin.rs  rumble.rs  spotify.rs  streamdav.rs  streamhub.rs  streamtape.rs  streamvid.rs  substack.rs  twatter.rs  vtube.rs  wolfstream.rs  youtube.rs
src/helpers/: is_terminal.rs  mod.rs  play_manager.rs  provider_num.rs  reqwests.rs  selection.rs  tmp_path.rs  unescape_html_chars.rs
src/providers/: allanime.rs  mod.rs
