[package]
name = "titans"
authors = ["BASED"]
license = "GPL-3.0"
version = "0.3.7"
edition = "2021"
description = "Blazingly Fast scraper"
keywords = ["youtube", "scraper", "webscraper", "cli", "youtube-downloader"]
repository = "https://github.com/Based-Programmer/titans"

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
isahc = "1.7.2"
url = "2.5.0"
regex = "1.10.2"
serde_json = "1.0.108"
once_cell = "1.18.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
