[package]
name = "titans"
authors = ["BASED"]
license = "GPL-3.0"
version = "0.4.2"
edition = "2021"
description = "Blazingly Fast scraper"
keywords = ["youtube", "scraper", "webscraper", "cli", "youtube-downloader"]
repository = "https://github.com/Based-Programmer/titans"

[dependencies]
isahc = { version = "1.7.2", features=["text-decoding", "json"], default-features = false}
url = "2.5.0"
regex = "1.10.4"
fastrand = "1.9.0"
serde_json = "1.0.115"
once_cell = "1.19.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
