[package]
name = "titans"
authors = ["BASED"]
license = "GPL-3.0"
version = "0.4.7"
edition = "2021"
description = "Blazingly Fast scraper"
keywords = ["youtube", "scraper", "webscraper", "cli", "youtube-downloader"]
repository = "https://github.com/Based-Programmer/titans"

[dependencies]
isahc = { version = "1.7.2", features = ["text-decoding", "json"], default-features = false}
url = "2.5"
regex = "1.11"
fastrand = "1.9.0"
serde_json = "1.0"
once_cell = "1.20"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
